[project]
name = "ar"
dynamic = ['version']
requires-python = ">=3.7"
authors = [
  {name = "Samuel Carlsson", email = "samuel.carlsson@gmail.com"},
]
description = "Access ar archive files (.a)!"
readme = "README.md"
keywords = ["ar", "archive", "library", "extract"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    "pylint",
    "mypy",
]

test = [
    "pytest ~=7.4.4",
]

[project.urls]
Repository = "https://github.com/vidstige/ar/"
"Bug Tracker" = "https://github.com/vidstige/ar/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
only-packages = true

[tool.hatch.build.targets.sdist]
exclude = [
  ".pylintrc",
  ".gitignore",
  ".github/workflows/",
  "test_data/",
  "tests/",
]
