[project]
name = "ar"
dynamic = ['version']
requires-python = ">=3.8"
authors = [
  {name = "Samuel Carlsson", email = "samuel.carlsson@gmail.com"},
]
description = "Access ar archive files (.a)!"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["ar", "archive", "library", "extract"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "mypy",
]

test = [
    "pytest ~=7.4.4",
]

[project.urls]
Repository = "https://github.com/vidstige/ar/"
"Bug Tracker" = "https://github.com/vidstige/ar/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
